<?xml version='1.0' encoding='utf-8'?>
<package format="2">
   <name>map_msgs</name>
   <version>1.13.0</version>
   <description>
      This package defines messages commonly used in mapping packages.
   </description>
   <author>Stéphane Magnenat</author>
   <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
   <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>

   <license>BSD</license>
   <url type="website">http://ros.org/wiki/map_msgs</url>
   <url type="bugtracker">https://github.com/ros-planning/navigation_msgs/issues</url>

   <buildtool_depend>ament</buildtool_depend>

   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>

   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
