<?xml version='1.0' encoding='utf-8'?>
<package format="2">
    <name>move_base_msgs</name>
    <version>1.13.0</version>
    <description>

        Holds the action description and relevant messages for the move_base package

    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>BSD</license>
    <url type="website">http://wiki.ros.org/move_base_msgs</url>
    <url type="bugtracker">https://github.com/ros-planning/navigation_msgs/issues</url>

    <buildtool_depend>ament</buildtool_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
